# mkr_ecs

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  README.md  WORKSPACE  bazel_build.sh
ecs/: archetype.cpp  archetype.h  component.h  system.h  world.h
include/ecs/: archetype.cpp  archetype.h  component.h  world.h
src/ecs/: archetype.h  component.h  component_id.h  ecs_id.cpp  ecs_id.h  exception.h  id.cpp  id.h  world.cpp  world.h
test/: CMakeLists.txt
test/ut/: archetype_test.cpp  id_test.cpp  world_test.cpp
